fixed icon alignment

--- a/style/style.css
+++ b/style/style.css
@@ -390,6 +390,10 @@ section.language p{
     margin: 0 0.6rem;
 }
 
+i {
+    align-self: center;
+}
+
 /* ! img section */
 
 #designit {
